NEWS - OpenPrinting CUPS Filters v1.27.5 - 2020-06-05
-----------------------------------------------------

CHANGES IN V2.0.0

	- Sample PPDs: Corrected manufacturer name in
	  Fuji_Xerox-DocuPrint_CM305_df-PDF.ppd.
	- texttopdf: Added support for PPD-less use.
	- libcupsfilters, imagetops: Introduced imagetops() filter
	  function for Printer Application to print on PostScript
	  printers. It is used to print images (IPP standard requires
	  at least JPEG to be accepted) without need of a PDF renderer
	  (imagetopdf -> pdftops) and without need to convert to
	  Raster (imagetoraster -> rastertops). The CUPS filter
	  imagetops uses this filter function now, too.
	- libcupsfilters, imagetopdf: Moved core functionality of
	  imagetopdf into the imagetopdf() filter function.
	- libcupsfilters, imagetoraster: Moved core functionality of
	  imagetoraster into the imagetoraster() filter function.
	- sys5ippprinter, cups-browsed: Removed sys5ippprinter, as
	  CUPS does not support System V interface scripts any
	  more. This first approach of PPD-less printing was also not
	  actually made use of.
	- libcupsfilters, gstoraster, gstopdf, gstopxl: Moved core
	  functionality of gstoraster into the ghostscript() filter
	  function.
	- braille: Support new liblouis tables not containing a
          display name (Pull request #303)
	- libcupsfilters: Added filterChain() filter function to run
	  several filter functions in a chain.
	- libcupsfilters, pdftopdf: Moved core functionality of
	  pdftopdf into the pdftopdf() filter function (Pull request
	  #301, #307).
	- Build system: Let ./configure not error out when there is
	  more than one DejaVuSans.ttf test font candidate (Issue
	  #300).
	- cups-browsed: Crash when a remote printer set as default
	  gets removed, due to missing variable in printf() call
	  (Issue #299).
	- COPYING: Fixed several typos
	- libcupsfilters: Fixed typo in log message of
	  get_printer_attributes functions.