@@ -3,6 +3,16 @@ NEWS - OpenPrinting CUPS Filters v1.27.5 - 2020-06-05
 
 CHANGES IN V2.0.0
 
+	- libppd: Added PPD collection handling functions (based on
+	  the code of cups-driverd in CUPS), for listing collections
+	  of PPD files and picking a PPD out of the collection.  PPDs
+	  can be in arbitrary subdirectory structures, .tar and
+	  .tar.gz files, and also be generated by executables, as one
+	  uses them with CUPS in /usr/lib/cups/driver. This is for
+	  Printer Applications which retro-fit classic CUPS drivers.
+	- libppd, libcupsfilters: Share the definition of logging functions
+	  between the two libraries, so that the same logging functions
+	  can be used with both.
 	- Sample PPDs: Corrected manufacturer name in
 	  Fuji_Xerox-DocuPrint_CM305_df-PDF.ppd.
 	- texttopdf: Added support for PPD-less use.
